updated card header ui

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -21,11 +21,16 @@
           min-height: 12em;
           align-items: flex-end;
           display: flex;
-          background-color: #140633;
+          background-color: #14033c;
+          background-image: url('./assets/right-bg.svg'), url('./assets/right-bg.svg');
+          background-repeat: no-repeat;
+          background-position: 203%, -121%;
+          background-size: 70%;
           .ant-card-head-wrapper{
             .ant-card-head-title{
               h1{
                 color: #FFF;
+                font-weight: 800;
                 span{
                   color: #29125f;
                   word-break: break-word;
