updated banner design on header

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -16,16 +16,18 @@
     height: inherit;
     .slider-left{
       background-color: #fff;
+      box-shadow: 1px 0px 8px #0000006b;
       .ant-card{
         .ant-card-head{
-          min-height: 12em;
           align-items: flex-end;
-          display: flex;
           background-color: #14033c;
-          background-image: url('./assets/right-bg.svg'), url('./assets/right-bg.svg');
+          background-image: url(./assets/background.svg);
+          display: flex;
+          min-height: 12em;
+          background-position-y: 27%;
+          background-position-x: 0;
           background-repeat: no-repeat;
-          background-position: 203%, -121%;
-          background-size: 70%;
+          background-size: 151%;
           .ant-card-head-wrapper{
             .ant-card-head-title{
               h1{
