--- a/client/src/App.less
+++ b/client/src/App.less
@@ -52,3 +52,104 @@
     }
   }
 }
+
+
+.Playground{
+  min-height: 100vh;
+  background: #fff;
+  header{
+    height: 48px;
+    background: #29125f;
+    padding: 0;
+    .logo{
+      float: left;
+      width: auto;
+      height: inherit;
+      position: relative;
+      display: flex;
+      align-items: center;
+      padding: 0 3em;
+      img{
+        width: auto;
+        height: 2.5em;
+      }
+    }
+
+    .ant-menu{
+      height: inherit;
+      background: transparent;
+      .ant-menu-item{
+        margin: 0.5em 0.5em 0;
+        border-radius: 0.3em 0.3em 0 0;
+        display: flex;
+        align-items: center;
+        &:hover{
+          background-color: #FFF;
+        }
+      }
+      .ant-menu-item-selected{
+        background-color: #fff !important;
+        color: #f22076;
+        span{
+          background-color: transparent;
+          color: #f22076;
+        }
+      }
+    }
+  }
+
+  .ant-layout-content{
+    overflow: hidden;
+    position: relative;
+
+    .site-layout-content{
+      height: calc(100vh - 14vh);
+      background: #ececec;
+      background-image: url('./assets/board.svg');
+      justify-content: center;
+      display: flex;
+      align-items: center;
+    }
+
+    .ant-drawer-content{
+      .ant-drawer-body{
+        padding: 0;
+        .ant-list-item{
+          cursor: pointer;
+          .ant-list-item-meta{
+            padding: 0 24px;
+            .ant-list-item-meta-title{
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.Iframe{
+    padding: 12px;
+    border: 1px solid;
+    display: block;
+    margin: 20px auto;
+    overflow: hidden;
+    border: 1px solid #bdbaba;
+    border-radius: 5.5px;
+    padding: 10px;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 15px 1px rgb(90 90 90 / 8%);
+    box-shadow: 0 1px 15px 1px rgb(90 90 90 / 8%);
+    iframe{
+      border: 0;
+      background: #f3f3f3;
+    }
+}
+
+.Sidebar{
+    margin: 1em 0 1em 1em;
+    height: calc(100vh - 9vh);
+    .ant-card{
+      height: inherit;
+    }
+}
