updated playground layout

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -28,6 +28,7 @@
           background-position-x: 0;
           background-repeat: no-repeat;
           background-size: 151%;
+          border-radius: 0;
           .ant-card-head-wrapper{
             .ant-card-head-title{
               h1{
