updated server settings for upload

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -7,7 +7,7 @@
 
 .Home{
   background-color: #0d0423;
-  height: inherit;
+  height: 100vh;
   background-image: url('./assets/background.svg');
   background-size: cover;
   background-repeat: no-repeat;
