updated backend for playground, achieve previews

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -125,7 +125,6 @@
       display: flex;
       align-items: center;
       border: solid 1px #b1b1b1;
-
     }
 
     .ant-drawer-content{
@@ -135,8 +134,11 @@
           cursor: pointer;
           .ant-list-item-meta{
             padding: 0 24px;
+            align-items: center;
             .ant-list-item-meta-title{
               margin-bottom: 0;
+              font-weight: 700;
+              color: #5025c4;
             }
           }
         }
