updated sidebar logic to set all dynamic elemnts html value

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -187,7 +187,7 @@
         }
         .ant-row{
           .ant-col{
-            #image{
+            .btnImage{
               width: 5em;
               height: 5em;
               padding: 0;
@@ -209,6 +209,8 @@
               width: inherit;
               .ant-col{
                 display: flex;
+              }
+              .ant-col-offset-8{
                 justify-content: flex-end;
               }
             }
