updated drawer configuration when there's now template id

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -131,6 +131,20 @@
     }
 
     .ant-drawer-content{
+      .ant-drawer-header{
+        .ant-drawer-title{
+            background-image: linear-gradient(341deg,#e0238c,#f22076 47.43%,#f96666);
+          background-size: 100%;
+          -webkit-background-clip: text;
+          -moz-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          -moz-text-fill-color: transparent;
+          word-break: break-word;
+          color: #000;
+          font-weight: 800;
+        }
+      }
+
       .ant-drawer-body{
         padding: 0;
         .ant-list-item{
