added frame controls

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -112,7 +112,6 @@
     margin-top: 0.3em;
     .ant-row{
       z-index: 9;
-      position: fixed;
       background: #fff;
       .breadcrumbs{
         display: flex;
@@ -265,4 +264,10 @@
         }
       }
     }
+}
+
+.FrameControl{
+  .ant-btn-icon-only.ant-btn-sm{
+    width: auto;
+  }
 }
