updated preview page

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -271,3 +271,57 @@
     width: auto;
   }
 }
+
+
+
+.Preview{
+  min-height: 100vh;
+  background: #fff;
+  header{
+    height: 48px;
+    background: #29125f;
+    padding: 0;
+    .logo{
+      float: left;
+      width: auto;
+      height: inherit;
+      position: relative;
+      display: flex;
+      align-items: center;
+      padding: 0 3em;
+      img{
+        width: auto;
+        height: 2.5em;
+      }
+    }
+
+    .ant-row{
+      height: inherit;
+      .ant-col{
+        height: inherit;
+        .ant-menu{
+          height: inherit;
+          background: transparent;
+          .ant-menu-item{
+            margin: 0.5em 0.2em 0;
+            border-radius: 0.3em 0.3em 0 0;
+            display: flex;
+            align-items: center;
+            &:hover{
+              color: #f22076;
+              background-color:#29125f;
+            }
+          }
+          .ant-menu-item-selected{
+            background-color: #fff !important;
+            color: #f22076;
+            span{
+              background-color: transparent;
+              color: #f22076;
+            }
+          }
+        }
+      }
+    }
+  }
+}
