--- a/client/src/App.less
+++ b/client/src/App.less
@@ -357,3 +357,19 @@
     }
   }
 }
+
+
+.Preview{
+  .iframe{
+    border:0;
+  }
+  .ant-page-header-heading-left{
+    width: 100vw;
+    .ant-page-header-heading-title{
+      width: 100vw;
+      .ant-typography-edit-content{
+        left: 0;
+      }
+    }
+  }
+}
