updated language functionality and added pop-up for saving new language

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -372,3 +372,15 @@
     }
   }
 }
+
+
+.language{
+  .ant-popover-inner-content{
+    padding: 0;
+    height: 200px;
+    overflow: scroll;
+    .ant-menu-item{
+      margin: 0;
+    }
+  }
+}
