updated css hover of header tabs

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -95,6 +95,9 @@
             &:hover {
               color: #f22076;
               background-color: #29125f;
+              a{
+                color: #f22076;
+              }
             }
           }
           .ant-menu-item-selected {
@@ -103,6 +106,9 @@
             span {
               background-color: transparent;
               color: #f22076;
+              a{
+                color: #f22076;
+              }
             }
           }
         }
@@ -317,6 +323,9 @@
             &:hover {
               color: #f22076;
               background-color: #29125f;
+              a{
+                color: #f22076;
+              }
             }
           }
           .ant-menu-item-selected {
@@ -325,6 +334,9 @@
             span {
               background-color: transparent;
               color: #f22076;
+              a{
+                color: #f22076;
+              }
             }
           }
         }
